# dune-uggrid

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  COPYING  README.md  config.h.cmake  configure.ac  dune-uggrid.pc.in  dune.module  initug.cc  initug.h  libug.pc.in  mainpage.doc  opts.sequential  ug-config.cmake.in  ug.doc  ugd.cc
dev/: CMakeLists.txt  initdev.h  sockcomm.cc  sockcomm.h  ugdevices.cc  ugdevices.h
dev/meta/: metafile.cc
dev/ppm/: ppm.cc
dev/ps/: postscript.cc  postscriptbw.cc
dev/rif/: remote.cc
dev/sif/: sif.cc
dev/xif/: shades.h  xgraph.cc  xgraph.h  xmain.cc  xmain.h  xshell.cc  xshell.h
dom/: CMakeLists.txt  domain.h
dom/lgm/: CMakeLists.txt  ansys2lgm.cc  ansys2lgm.h  lgm_domain.cc  lgm_domain.h  lgm_domain2d.cc  lgm_domain3d.cc  lgm_load.cc  lgm_load.h  lgm_parallel.cc  lgm_transfer.h  lgm_transfer2d.cc  lgm_transfer3d.cc
dom/lgm/netgen/: lgm_gginterface.h  surface.c
dom/lgm/ngin/: CMakeLists.txt  ngin-lex.ll  ngin-yacc.yy
dom/lgm/ngin2d/: CMakeLists.txt  ng.cc  ng2d.h  ngin-lex.ll  ngin-yacc.yy
dom/std/: CMakeLists.txt  domains2d.cc  domains3d.cc  std_domain.cc  std_domain.h  std_internal.h  std_parallel.cc
dune/uggrid/: CMakeLists.txt  commands.cc  commands.h  initug.cc  initug.h  ugdevices.cc  ugdevices.doc  ugdevices.h
dune/uggrid/domain/: CMakeLists.txt  domain.h  std_domain.cc  std_domain.h  std_internal.h  std_parallel.cc
dune/uggrid/gm/: CMakeLists.txt  GenerateRules.cc  GenerateRules.h  RefRules.cc  algebra.cc  algebra.h  cw.cc  cw.h  dlmgr.cc  dlmgr.h  dlmgr.t  elements.cc  elements.h  enrol.cc  enrol.h  er.cc  er.h  evalproc.cc  evm.cc  evm.h  gm.doc  gm.h  gmcheck.cc  initgm.cc  initgm.h  mgheapmgr.cc  mgheapmgr.h  mgio.cc  mgio.h  pargm.h  refine.cc  refine.h  rm-show.cc  rm-tetrahedron-rules-test.cc  rm-write2file.cc  rm-write2file.h  rm-writeRefRules2file.cc  rm.cc  rm.h  shapes.cc  (+5 more)
dune/uggrid/lib/: CMakeLists.txt
dune/uggrid/low/: CMakeLists.txt  architecture.h  bio.cc  bio.h  debug.cc  debug.h  defaults.cc  dimension.h  fifo.cc  fifo.h  fileopen.cc  fileopen.h  heaps.cc  heaps.h  initlow.cc  initlow.h  misc.cc  misc.h  namespace.h  scan.cc  scan.h  ugenv.cc  ugenv.h  ugstruct.cc  ugstruct.h  ugtime.h  ugtimer.cc  ugtimer.h  ugtypes.h
dune/uggrid/numerics/: CMakeLists.txt  disctools.cc  disctools.h  formats.cc  formats.h  initnp.cc  initnumerics.h  np.h  sm.cc  sm.h  udm.cc  udm.h
dune/uggrid/parallel/: CMakeLists.txt
gm/: CMakeLists.txt  GenerateRules.cc  algebra.cc  algebra.h  cw.cc  cw.h  dlmgr.cc  dlmgr.h  dlmgr.t  elements.cc  elements.h  enrol.cc  enrol.h  er.cc  er.h  evalproc.cc  evm.cc  evm.h  gm.doc  gm.h  gmcheck.cc  initgm.cc  initgm.h  mgheapmgr.cc  mgheapmgr.h  mgio.cc  mgio.h  pargm.h  refine.cc  refine.h  rm-show.cc  rm-tetrahedron-rules-test.cc  rm-write2file.cc  rm-write2file.h  rm-writeRefRules2file.cc  rm.cc  rm.h  shapes.cc  shapes.h  smooth.cc  (+4 more)
gm/gg2/: CMakeLists.txt  ggaccel.cc  ggaccel.h  ggm.cc  ggm.h  ggmain.cc  ggmain.h
gm/gg3/: CMakeLists.txt  gg3d.cc  gg3d.h  gginterface.h
lib/: CMakeLists.txt
lib/ugdata/: CMakeLists.txt
low/: CMakeLists.txt  architecture.h  bbtree.cc  bio.cc  bio.h  boxtree.cc  boxtree.h  debug.cc  debug.h  defaults.cc  defaults.h  fileopen.cc  fileopen.h  general.h  heaps.cc  heaps.h  initlow.cc  initlow.h  misc.cc  misc.h  namespace.h  pfile.cc  pfile.h  scan.cc  scan.h  smallvecs.h  tree.cc  tree.h  ugenv.cc  ugstruct.cc  ugstruct.h  ugtimer.cc  ugtimer.h
low/test/: CMakeLists.txt  test-fifo.cc
np/: CMakeLists.txt  initnp.cc  initnp.h  initnumerics.h  np.h  num.h
np/algebra/: CMakeLists.txt  amgtools.cc  amgtools.h  blasm.cc  blasm.h  block.cc  block.h  fegeom.cc  fegeom.h  ff.cc  ff.h  ff_gen.cc  ff_gen.h  fvgeom.cc  fvgeom.h  matfunc.ct  matloop.ct  matmode.ct  npcheck.cc  npcheck.h  quadrature.cc  quadrature.h  sm.cc  sm.h  transgrid.cc  transgrid.h  ugblas.cc  ugblas.h  ugeblas.cc  ugiter.cc  vecfunc.ct  vecloop.ct  vecmode.ct
np/amglib/: CMakeLists.txt  amg_blas.cc  amg_blas.h  amg_coarsen.cc  amg_coarsen.h  amg_header.h  amg_iter.cc  amg_iter.h  amg_low.cc  amg_low.h  amg_solve.cc  amg_solve.h  amg_sp.cc  amg_sp.h  amg_ug.cc  amg_ug.h  test.cc
np/famglib/: famg.C  famg_algebra.C  famg_algebra.h  famg_approx.C  famg_arrayalgebra.C  famg_arrayalgebra.h  famg_coloring.C  famg_coloring.h  famg_construct.C  famg_decomp.C  famg_decomp.h  famg_fifo.h  famg_graph.C  famg_graph.h  famg_graphics.C  famg_grid.C  famg_grid.h  famg_heap.C  famg_heap.h  famg_interface.C  famg_interface.h  famg_matrix.C  famg_matrix.h  famg_misc.C  famg_misc.h  famg_multigrid.C  famg_multigrid.h  famg_onlyugalgebra.h  famg_system.C  famg_system.h  famg_transfer.C  famg_transfer.h  famg_traverse.template  famg_ugalgebra.C  famg_ugalgebra.h  famg_uginterface.C  famg_uginterface.h  ug-famg.C  ug-famg.h
np/field/: CMakeLists.txt  field.h  stoch.cc
np/procs/: CMakeLists.txt  amgtransfer.cc  amgtransfer.h  assemble.cc  assemble.h  basics.cc  basics.h  bdf.cc  bdf.h  blocking.cc  blocking.h  db.cc  db.h  eiter.cc  eiter.h  els.cc  els.h  enewton.cc  enewton.h  error.cc  error.h  ew.cc  ew.h  ewn.cc  fas.cc  fas.h  freebnd.cc  freebnd.h  iter.cc  iter.h  iter_2.cc  ls.cc  ls.h  newton.cc  newton.h  nliter.cc  nliter.h  nls.cc  nls.h  order.cc  (+13 more)
np/udm/: CMakeLists.txt  data_io.cc  data_io.h  dio.cc  dio.h  disctools.cc  disctools.h  formats.cc  formats.h  npscan.cc  npscan.h  numproc.cc  numproc.h  pcr.cc  pcr.h  udm.cc  udm.h
parallel/: CMakeLists.txt  initparallel.cc  initparallel.h
parallel/ddd/: CMakeLists.txt  ddd.cc  dddi.h  dddstr.h
parallel/ddd/basic/: io.cc  (+10 more)
parallel/dddif/: CMakeLists.txt  compat.cc  debugger.cc  debugger.h  gridcons.cc  handler.cc  header.h  identify.cc  identify.h  initddd.cc  lb.cc  lbrcb.cc  memmgr.cc  overlap.cc  pamg.cc  parallel.h  partition.cc  pgmcheck.cc  priority.cc  support.cc  trans.cc
parallel/ppif/: CMakeLists.txt  ppif.h  ppif_general.h
parallel/util/: CMakeLists.txt  xbc.cc  xbc.h
tools/: CMakeLists.txt  m2ps.cc  ugansis.cc  ugmesh.cc  ugmgs.cc  ugnetgen.cc  ugpfm.cc  ugstl.cc  xugv.cc
(+232 files in other folders)
